sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: type mismatch;
 found   : Boolean
 required: Int
      if (plusPetitQue(i,getValeur(i+1) == false)) {
                                        ^